@@ -1153,12 +1153,16 @@ if [ $XCC_GCC = true ] ; then
         fi
         ;;
     esac
-  else
+  fi # !DEBUGGING
+  if [ "$cpu" = i386 ] ; then
     case "$XCC_GCC_VERSION" in
-      3* | 4*) # on linux: C_CODE_ALIGNMENT is wrong. &EVAL-WHEN = 0x806D512
+      3* | 4*)
+        # When not optimizing on linux, or with Apple's gcc 4 on MacOS X,
+        # or with GCC 4 when "gcc -Os" is used:
+        #   C_CODE_ALIGNMENT is wrong. &EVAL-WHEN = 0x806D512
         XCFLAGS=$XCFLAGS' -falign-functions=4'
     esac
-  fi # DEBUGGING
+  fi
   if [ $TSYS = win32gcc ] ; then
     XCFLAGS=$XCFLAGS' -D_WIN32'
   fi
